--- a/src/Component/Header/Header.module.css
+++ b/src/Component/Header/Header.module.css
@@ -38,6 +38,7 @@
     background: #333336;
     border: 1px solid rgba(255, 255, 255, 0.4);
     outline: none;
+    transition: .3s;
 }
 
 .searchBox button:hover {
